# ctxwitch

./: .gitignore  CLA.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  witch.yaml
.ctxwitch/: config.yaml
.github/workflows/: cla.yml
ccia-bench/: README.md  generate_pairs.py  pairs.jsonl  run_benchmark.py
ctxwitch/: __init__.py  runtime.py
ctxwitch/a2a/: handover.py
ctxwitch/cli/: main.py  spell.py  tour.py  witch.py
ctxwitch/core/: behavioral.py  context.py  decompose.py  dimensions.py  impact.py  judge.py  model_tiers.yaml  schema.py  similarity.py
ctxwitch/engine/: pr.py  store.py
ctxwitch/eval/: gate.py  runners.py
docs/: demo.tape
evals/: golden.jsonl
examples/: golden.jsonl
signatures/: cla.json
tests/: test_behavioral.py  test_cli.py  test_context.py  test_core_fixes.py  test_environments.py  test_eval.py  test_judge.py  test_negation_robustness.py  test_numeric_thresholds.py  test_runtime.py  test_tour.py
