[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctxwitch"
dynamic = ["version"]
description = "Version control for AI agent behavior. Semantic diffs across 12 behavioral dimensions, eval gates, and Context PRs for prompts, RAG configs, tool definitions, and guardrails."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Amey Kulkarni", email = "amey.inbox@gmail.com"},
    {name = "ctxwitch"},
]
keywords = ["ai", "context", "versioning", "llm", "prompt-management", "a2a", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Version Control",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "gitpython>=3.1",
    "jsonschema>=4.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
witch = "ctxwitch.cli.main:cli"
ctxw = "ctxwitch.cli.main:cli"

[tool.setuptools.dynamic]
version = {attr = "ctxwitch.__version__"}

[tool.setuptools.packages.find]
include = ["ctxwitch*"]

[tool.setuptools.package-data]
ctxwitch = ["core/*.yaml"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
